deployment/kubernetes/markitos-it-app-website.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: markitos-it-app-website-deployment
  namespace: default
  labels:
    app: markitos-it-app-website-deployment
spec:
  selector:
    matchLabels:
      app: markitos-it-app-website-deployment
  
  replicas: 3
  
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate

  template:
    metadata:
      labels:
        app: markitos-it-app-website-deployment
    spec:
      imagePullSecrets:
      - name: gcp-artifact-registry-secret
      
      containers:
      - name: markitos-it-app-website-container
        image: europe-southwest1-docker.pkg.dev/markitos-it-images/private/markitos-it-app-website:1.2.0
        
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            memory: 256Mi
        
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 5
          periodSeconds: 15
          failureThreshold: 3

        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 3
          timeoutSeconds: 2
          periodSeconds: 5

        ports:
        - containerPort: 8080
          name: http-port
          protocol: TCP
      
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: markitos-it-app-website-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: markitos-it-app-website-deployment  
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080
    protocol: TCP
    name: http-port
