deployment/kubernetes/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: markitos-it-app-website-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: markitos-it-app-website-pods
  template:
    metadata:
      labels:
        app: markitos-it-app-website-pods
    spec:
      imagePullSecrets:
      - name: gcp-artifact-registry-secret
      containers:
      - name: markitos-it-app-website-container
        image: europe-southwest1-docker.pkg.dev/markitos-it-images/private/markitos-it-app-website:1.0.0
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
        resources:
          requests:
            cpu: "50m"      
            memory: "128Mi"  
          limits:
            cpu: "500m"      
            memory: "256Mi"  
---
apiVersion: v1
kind: Service
metadata:
  name: markitos-it-app-website-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app:  markitos-it-app-website-pods
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: markitos-it-app-website-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: markitos.it.ing.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: markitos-it-app-website-service
            port:
              number: 8080
